grammar.js
    module: $ => choice(
      seq(
        optional($.module_header),
        optional($.prelude),
        repeat($.import),
        repeat($._command),
      ),
      // Fragment fallback: a sequence of tactics and/or expressions,
      // as seen in hover popups and docstring code blocks.
      repeat1($._fragment_element),
    ),

    _fragment_element: $ => choice(
      $._tactic,
      $._expression,
    ),

    _command: $ => choice(
      // Decorated declarations: doc comment + attributes + modifiers + decl.
      // Wrapped in a single visible node so Helix's syntax-tree expand
      // selection (alt+o) can grow from inside the body to the full
      // declaration including its preamble.
      $.decorated_declaration,
      // Other commands (no modifiers)
      $.namespace,
      $.section,
      $.end,
      $.open,
      $.export,
      $.variable,
      $.universe,
      $.hash_command,
      $.syntax,
      $.set_option,
      $.include,
      $.omit,
    ),

    // `set_option name value` — option setter (lean4 Command.lean:218).
    // Use prec.left so the dotted-name parse is preferred over splitting
    // `name.field value` into name + projection-applied-to-value.
    _modifier: _ => choice('noncomputable', 'partial', 'protected', 'private', 'public', 'meta', 'unsafe', 'scoped', 'local'),


    // Namespace: `namespace Foo` or `namespace Foo.Bar.Baz`
    example: $ => seq(
      'example',
      optional(field('binders', $.binders)),
      optional($._type_spec),
      ':=',
      field('body', $._expression),
    ),

    // ============================================================
    // Declarations
    // ============================================================

    _declaration: $ => choice(
      $.definition,
      alias($._instance_decl, $.definition),
      $.constant,
      $.opaque,
      $.axiom,
      $.structure,
      $.inductive,
      $.class_inductive,
    ),

    // Doc comment + attributes + modifiers + declaration, all wrapped in one
    // visible node so the Helix syntax-tree expand selection grows from the
    // body's expression up to the full declaration with its preamble.
    decorated_declaration: $ => seq(
      optional(field('doc', $.doc_comment)),
      optional(field('attributes', $.attributes)),
      repeat(field('modifier', $._modifier)),
      field('declaration', choice(
        $._declaration,
        $.example,
        $.notation,
        $.attribute,
        $.initialize,
      )),
    ),

    // `@[simp, inline]`, `@[extern "foo"]`, `@[command_elab assertCheckCmd]`,
    // `@[default_instance prio]`, etc. Each comma-separated entry is a name
    // followed by an optional sequence of atomic arguments (idents/strings/
    // numbers).
    //
    // `@[` is one token, not `'@', '['` — see #1.
    attributes: $ => seq(
      token('@['),
      commaSep1($.attribute_entry),
      ']',
    ),

    attribute_entry: $ => seq(
      field('name', $._name),
      repeat(field('arg', choice($.identifier, $.escaped_identifier, $.string, $.number))),
    ),

    // def/theorem/lemma/abbrev — name is required, no ambiguity with binders.
    // Modifiers (noncomputable, partial, etc.) are consumed transparently.
    definition: $ => seq(
      field('kind', choice('def', 'theorem', 'lemma', 'abbrev')),
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      $._declaration_body,
    ),

    // Shared body production for definition and instance — factored out
    // to let the parser reuse states across both declaration forms.
    _declaration_body: $ => choice(
      seq(':=', $._layout_start, field('body', $._expression), $._layout_end),
      seq('where', $._layout_start, repeat1(seq(field('body', $.where_decl), optional($._layout_semicolon))), $._layout_end),
      repeat1($.match_arm),
    ),

    // instance — name is optional; aliased to `definition` in the parse tree.
    // Instance binders are always bracketed (no bare identifier ambiguity with name).
    where_decl: $ => seq(
      field('name', $.identifier),
      repeat(field('binders', choice($.identifier, $._bracketed_binder))),
      optional($._type_spec),
      choice(
        seq(':=', $._layout_start, field('body', $._expression), $._layout_end),
        // Match-equation style: `toString | .style => "style" | ...`
        repeat1($.match_arm),
      ),
    ),

    // `constant foo : T` — opaque constant declaration
    constant: $ => seq(
      'constant',
      field('name', $._name),
      optional($._type_spec),
      optional(seq(':=', field('body', $._expression))),
    ),

    // `opaque foo : T := e` — opaque definition
    axiom: $ => seq(
      'axiom',
      field('name', $._name),
      $._type_spec,
    ),

    structure: $ => seq(
      choice('structure', 'class'),
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional(field('extends', seq('extends', commaSep1($._expression)))),
      optional($._type_spec),
      optional(seq(
        choice(':=', 'where'),
        $._layout_start,
        repeat(seq(field('fields', choice($.structure_field, $._bracketed_binder)), optional($._layout_semicolon))),
        $._layout_end,
      )),
      optional(seq('deriving', commaSep1(field('deriving', $.identifier)))),
    ),

    // Structure fields: `x : T` or `x : T := default` or `x := default`
    inductive: $ => seq(
      'inductive',
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      optional(choice(':=', 'where')),
      repeat(field('constructors', $.constructor)),
      optional(seq('deriving', commaSep1(field('deriving', $.identifier)))),
    ),

    // `class inductive Foo where | ...` — prec(1) to win over `structure`
    // when parser sees `class` followed by `inductive`
    class_inductive: $ => prec(1, seq(
      'class', 'inductive',
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      optional(choice(':=', 'where')),
      repeat(field('constructors', $.constructor)),
      optional(seq('deriving', commaSep1(field('deriving', $.identifier)))),
    )),

    constructor: $ => seq(
      optional(field('doc', $.doc_comment)),
      '|',
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
    ),

    // ============================================================
    // Binders
    // ============================================================

    binders: $ => repeat1(choice($.identifier, $._bracketed_binder)),

    // Quantifier binders: `x y : Nat` or `(x : Nat) {y : Nat}`
    // Bare identifiers can have a trailing `: Type` annotation
    _bracketed_binder: $ => choice(
      $.explicit_binder,
      $.implicit_binder,
      $.instance_binder,
    ),

    explicit_binder: $ => seq(
      '(',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      optional(seq(':=', field('default', $._expression))),
      ')',
    ),

    implicit_binder: $ => seq(
      '{',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      '}',
    ),

    instance_binder: $ => seq(
      '[',
      optional(seq(field('name', $.identifier), ':')),
      field('type', $._expression),
      ']',
    ),

    _type_spec: $ => seq(':', field('type', $._expression)),

    // ============================================================
    // Expressions
    // ============================================================

    _expression: $ => choice(
      $._atom,
      $.application,
      $.subscript,
      $.complement,
      $.binary_expression,
      $.unary_expression,
      $.explicit,
      // postfix ! and ? are handled by subscript modifier and notation
      $.projection,
      $.arrow,
      $.fun,
      $.quantifier,
      $.big_operator,
      $.let,
      $.have,
      $.if,
      $.if_let,
      $.match,
      $.do,
      $.by,
      $.try,
      $.return,
      $.as_pattern,
      $.show,
      $.suffices,
    ),

    // `show T from proof` / `show T by tactic` — explicit type ascription with proof.
    return: $ => prec.right(seq('return', optional(field('value', $._expression)))),

    // As-pattern: `name@pattern` (no space). Mirrors lean4's match-pattern bind.
    _atom: $ => choice(
      $.identifier,
      $.escaped_identifier,
      $.sort_star,
      $.number,
      $.float,
      $.string,
      $.interpolated_string,
      $.char,
      $.parenthesized,
      $.named_argument,
      $.tuple,
      $.anonymous_constructor,
      $.structure_instance,
      $.array,
      $.list,
      $.range,
      $.hole,
      $.synthetic_hole,
      $.quoted_name,
      $.double_quoted_name,
      $.syntax_quotation,
      $.ellipsis,
      $.sorry,
      $._boolean,
      $.cdot,
      $.subtype,
    ),

    // Function application: `f x y z`
    // Uses prec.left to parse `f x y` as `(f x) y`
    application: $ => prec.left(PREC.app, seq(
      field('name', $._expression),
      field('arguments', choice(
        $._atom,
        $.fun,
        $.if,
        $.match,
        $.do,
        $.by,
      )),
    )),

    // Array/list subscript: `arr[i]` or `arr[i]!` or `arr[i]?`
    // Also handles subarray slice: `arr[start:stop]`.
    //
    // Index/slice as separate alternatives rather than nested `optional()`s — see #1.
    _name: $ => prec.right(seq(
      choice($.identifier, $.escaped_identifier),
      repeat(seq(token.immediate('.'), choice($.identifier, $.escaped_identifier))),
    )),

    // Projection: `x.foo` or `x.1` or `x.«name»` or `.field` (leading dot).
    // Splitting the leading-dot form into its own rule costs more states, not fewer — see #1.
    projection: $ => prec.left(PREC.proj, seq(
      optional(field('term', $._expression)),
      choice(
        token.immediate('.'),  // For `x.field` where x is an expression
        '.',                   // For `.field` (leading dot)
      ),
      field('name', choice($.identifier, $.escaped_identifier, $.number)),
    )),

    // Arrow type: `A → B`
    arrow: $ => prec.right(PREC.low, seq(
      field('domain', $._expression),
      choice('->', '→'),
      field('codomain', $._expression),
    )),

    // Binary operators with table-driven precedence.
    // One hidden operator-class rule per precedence level (see `_op_*` below) — see #1.
    binary_expression: $ => {
      const leftAssoc = [
        [PREC.low, $._op_or],
        [PREC.and, $._op_and],
        [PREC.compare, $._op_cmp],
        [PREC.add, $._op_add],
        [PREC.mul, $._op_mul],
        [PREC.app + 1, $._op_pipe],
      ];

      // Right-associative: $, <|, ::, ^, ∘
      const rightAssoc = [
        [PREC.low, $._op_dollar],
        [PREC.add, $._op_cons],
        [PREC.mul, $._op_pow],
        [PREC.app + 1, $._op_lpipe],
      ];

      return choice(
        ...leftAssoc.map(([precedence, operator]) =>
          prec.left(precedence, seq(
            field('left', $._expression),
            field('operator', alias(operator, 'operator')),
            field('right', $._expression),
          )),
        ),
        ...rightAssoc.map(([precedence, operator]) =>
          prec.right(precedence, seq(
            field('left', $._expression),
            field('operator', alias(operator, 'operator')),
            field('right', $._expression),
          )),
        ),
      );
    },

    // Operator classes: one hidden rule per precedence level. Kept as
    // separate literals rather than one folded terminal per level (cheaper,
    // but erases individual symbols from node-types.json) — see #1.
    _op_or: _ => choice('||', '∨', '<|>', '<$>', '<*>', '*>', '<*'),
    _op_and: _ => choice('&&', '∧'),
    // Membership/subset relations — see #8.
    _op_cmp: _ => choice('==', '!=', '=', '<', '>', '<=', '>=', '≤', '≥', '≠',
                         '∣', '↔', '⊢', '∈', '∉', '⊆', '⊂', '⊇', '⊃'),
    _op_add: _ => choice('+', '-', '++', '∪', '∩', '×', '\\'),
    _op_mul: _ => choice('*', '/', '%'),
    _op_pipe: _ => choice('|>', '|>.'),
    _op_dollar: _ => '$',
    _op_cons: _ => '::',
    _op_pow: _ => choice('^', '∘'),
    _op_lpipe: _ => '<|',

    // Prefix operators (includes monadic lift ← for do-blocks).
    // Plain `prec`, not `prec.right` — see #1.
    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('!', '¬', '-', '←', '<-')),
      field('operand', $._expression),
    )),

    // Explicit: `@ident` — suppresses implicit arguments
    fun: $ => prec.right(seq(
      choice('fun', 'λ'),
      choice(
        seq(
          field('binders', repeat1(choice($._pattern, $._bracketed_binder))),
          arrow(),
          $._layout_start,
          field('body', $._expression),
          $._layout_end,
        ),
        repeat1($.match_arm),
      ),
    )),

    // Universal/existential quantifier: `∀ x, P x` or `∃ x, P x`
    have: $ => prec.right(seq(
      'have',
      optional(field('name', $.identifier)),
      optional($._type_spec),
      $._binding_body,
    )),

    // Shared `:= value ; body` tail for `let` and `have` — extracted so the
    // parser reuses states across both forms. Body is required, not
    // `optional()` — see #1.
    _binding_body: $ => prec.right(seq(
      ':=',
      field('value', $._expression),
      choice(';', $._layout_semicolon),
      field('body', $._expression),
    )),

    // ============================================================
    // Tactic mode (entered via `by`)
    // Tactics are a separate syntactic category from expressions.
    // Expressions can contain `by` blocks, but never raw tactics.
    // ============================================================

    // `by` is the only entry point from expression world into tactic world.
    by: $ => prec.right(seq(
      'by',
      $._layout_start,
      optional($._tactic_seq),
      $._layout_end,
    )),

    // Tactics separated by `;`, `<;>` (broadcast), or newlines
    _tactic_seq: $ => prec.right(seq(
      $._tactic,
      repeat(seq(
        choice($._layout_semicolon, ';', '<;>', '<;'),
        $._tactic,
      )),
      optional(';'),
    )),

    // ── Tactic primitives ─────────────────────────────────────
    // Each rule here lives exclusively inside `by` blocks.
    // None of these appear in `_expression`.

    tactic_apply: $ => prec.right(PREC.app, seq(
      field('tactic', $.identifier),
      repeat(field('arg', choice(
        $._expression, $.tactic_config,
      ))),
    )),

    // Configuration list: `[lemma1, ←lemma2, *]`
    // The ← before lemmas is handled by unary_expression.
    tactic_have: $ => choice(
      prec.right(seq(
        'have',
        field('name', $.identifier),
        optional(field('parameters', $.parameters)),
        optional($._type_spec),
        ':=',
        field('value', $._expression),
      )),
      prec.right(seq(
        'have',
        optional(field('name', choice($.hole, $.tuple_pattern, $.syntax_quotation))),
        optional($._type_spec),
        ':=',
        field('value', $._expression),
      )),
      prec.right(seq(
        choice('obtain', 'suffices'),
        optional(field('name', $._pattern)),
        optional($._type_spec),
        ':=',
        field('value', $._expression),
      )),
    ),

    // `let x := e` in tactic mode — same identifier/pattern split as
    // tactic_have above, see #11.
    parameters: $ => repeat1(choice($.identifier, $._bracketed_binder)),

    // If expression: `if cond then t else e`
    // Also handles `if h : cond then t else e` (dependent if with hypothesis)
    if: $ => prec.right(seq(
      'if',
      optional(seq(field('hyp', $.identifier), ':')),
      field('condition', $._expression),
      $._then_else,
    )),

    // Shared `then expr [else expr]` tail for `if` and `if_let` — extracted
    // so the parser reuses states across both forms.
